# Menu

./: .gitignore  README.md  pyproject.toml
menu/: modelos.py
menu/api/: app.py
menu/api/templates/: cardapio.html
menu/armazenamento/: local.py
menu/qrcode/: gerador.py
menu/repositorio/: banco.py
tests/: test_api.py  test_api_qrcode.py  test_busca_api.py  test_cardapio_web.py  test_exportar_csv.py  test_exportar_importar.py  test_modelos.py  test_qrcode.py  test_repositorio.py  test_upload.py
