[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "menu"
version = "0.1.0"
description = "Plataforma open source de cardápios digitais auto-hospedados"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.12",
    "uvicorn[standard]>=0.30.0",
    "qrcode[pil]>=7.4.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
